<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Smart Hotel</string>
    <string name="action_close_session">Close session</string>
    <string name="backgr">Background</string>
    <string name="remember">Remember password</string>
    <string name="newTo">New to Smart Hotel? Register online now!</string>
    <string name="forgot">Forgot your password?</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_regis">RegisActivity</string>
    <string name="action_register">Register</string>
    <string name="open_door">Open door</string>
    <string name="door_status_closed">Door is currently closed</string>
    <string name="title_activity_room">RoomActivity</string>
    <string name="action_display">Action displayed here</string>
    <string name="progress_display_red">0</string>
    <string name="progress_display_green">0</string>
    <string name="progress_display_blue">0</string>
    <string name="welcome_main">Welcome to your Smart Hotel account</string>
    <string name="assign_room">You currently have no room booked</string>
    <string name="register">Register</string>
    <string name="demo">Demo</string>
    
    
</resources>
