<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="smart.hotel.project.RegisActivity"
    tools:ignore="MergeRootFrame" >
    
    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/background"
        android:contentDescription="@string/backgr"
        android:scaleType = "fitXY" />

    <LinearLayout
        android:id="@+id/login_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone" >

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp" />

        <TextView
            android:id="@+id/login_status_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/login_progress_signing_in"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <!-- Login form -->

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            style="@style/LoginFormContainer"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="0dip"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_weight="0.32"
                android:text="@string/welcome_main" />

            <Button
                android:id="@+id/check_rooms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Check Rooms" />

            <TextView
                android:id="@+id/textView2"
                 android:layout_width="wrap_content"
                android:layout_height="0dip"
                android:layout_weight="0.32"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/assign_room"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <Button
                android:id="@+id/open_door_button"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="4dp"
                android:layout_width="fill_parent"
				android:layout_marginLeft="10dip"
				android:layout_marginRight="10dip"
                android:paddingLeft="32dp"
                android:paddingRight="32dp"
                android:text="@string/open_door" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="0dip"
                android:layout_weight="0.32"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/door_status_closed" />

        </LinearLayout>

    </ScrollView>


</merge>